# ROS2-foxy-armbot

./: .gitignore  README.md  date
install/: local_setup.sh  setup.sh
install/aimibot/lib/aimibot/: aimibot  nav_test
install/aimibot/share/aimibot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/aimibot/share/aimibot/cmake/: ament_cmake_export_include_directories-extras.cmake
install/aimibot/share/aimibot/launch/: 51-minimal.launch-8-6-1.tar.xz  51-minimal.launch-8-7.tar.xz  minimal.launch.py  pointcloud_to_laserscan_launch.py
install/armbot_description/share/armbot_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/armbot_description/share/armbot_description/cmake/: ament_cmake_export_dependencies-extras.cmake
install/armbot_description/share/armbot_description/config/: armbot_rviz2_config.rviz
install/armbot_description/share/armbot_description/urdf/: decorations.urdf.xacro  husky.urdf  husky.urdf.xacro
install/description/share/description/: local_setup.sh  package.ps1  package.sh
install/description/share/description/urdf/: aimibot (copy).urdf
install/husky_description/share/husky_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/husky_description/share/husky_description/cmake/: ament_cmake_export_dependencies-extras.cmake  husky_descriptionConfig.cmake
install/keyboard_control/lib/keyboard_control/: key_publisher
install/keyboard_control/share/keyboard_control/: keyboard.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ls01b/lib/ls01b/: ls01b_v2
install/ls01b/share/ls01b/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ls01b/share/ls01b/cmake/: ls01bConfig.cmake
install/mymsgs/include/mymsgs/msg/: attitued.h  attitued.hpp  attitued__rosidl_typesupport_connext_c.h  attitued__rosidl_typesupport_connext_cpp.hpp  control.h  control__rosidl_typesupport_connext_c.h  control__rosidl_typesupport_connext_cpp.hpp  core.hpp  core__rosidl_typesupport_connext_cpp.hpp  gpio.hpp  gpio__rosidl_typesupport_connext_c.h  heart__rosidl_typesupport_connext_c.h  imu__rosidl_typesupport_connext_c.h  packet_msg.h  rosidl_typesupport_connext_c__visibility_control.h  rosidl_typesupport_connext_cpp__visibility_control.h  twis.h  twis__rosidl_typesupport_connext_c.h  version.h  version__rosidl_typesupport_connext_c.h
install/mymsgs/include/mymsgs/srv/: os_config_srv.h  os_config_srv.hpp  os_config_srv__rosidl_typesupport_connext_cpp.hpp
install/mymsgs/share/mymsgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mymsgs/share/mymsgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  mymsgsConfig.cmake  mymsgs__rosidl_generator_cExport-noconfig.cmake  mymsgs__rosidl_generator_cExport.cmake  mymsgs__rosidl_typesupport_cExport-noconfig.cmake  mymsgs__rosidl_typesupport_cppExport.cmake  mymsgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  (+3 more)
install/navigation/share/navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ouster_ros/lib/ouster_ros/: os_cloud_node  os_node
install/ouster_ros/share/ouster_ros/: package.dsv  package.ps1  package.sh
install/pointcloud_to_laserscan/lib/pointcloud_to_laserscan/: dummy_pointcloud_publisher  laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/: local_setup.sh  package.ps1  package.sh
install/ur_description/share/ur_description/: package.ps1  package.sh  urdfoutput.urdf
install/ur_e_description/share/ur_e_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_msgs/share/ur_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/aimibot/: CMakeLists.txt
src/aimibot/include/aimibot/: aimibot.hpp  data_struct.hpp  diff_driver.hpp  message_callback.hpp  odometry.hpp
src/aimibot/launch/: 51-minimal.launch.py  dummy_navigation_launch.py  pub.py  raw_minimal.launch.py
src/aimibot/src/: diff_driver.cpp  main.cpp  message_callback.cpp  navigation.cpp  odometry.cpp  test.cpp
src/armbot_description/: CMakeLists.txt  package.xml
src/armbot_description/launch/: armbot_display.launch.py
src/armbot_description/log/: latest_list
src/armbot_description/meshes/: laser_link.STL  ouster_laser.stl
src/armbot_description/urdf/: husky.urdf  husky.urdf-8-7.tar.xz  wheel.urdf.xacro  workcell.urdf
src/description/: CMakeLists.txt
src/description/urdf/: aimibot.urdf
src/husky_description/launch/: description.launch.py
src/keyboard_control/: README.md  package.xml  setup.cfg  setup.py
src/keyboard_control/keyboard_control/: pub.py
src/ls01b/: CMakeLists.txt  package.xml
src/ls01b/include/ls01b/: ls01b.h  ls01b_node.h  lsiosr.h
src/ls01b/launch/: lsaer.launch.py
src/ls01b/src/: ls01b.cpp  ls01b_node.cpp  lsiosr.cpp
src/mymsgs/: CMakeLists.txt
src/mymsgs/msg/: Attitued.msg
src/navigation/: CMakeLists.txt
src/navigation/launch/: bringup_launch.py  navigation2.launch.py  navigation_launch.py
src/navigation/map/: c2.pgm
src/navigation/rviz/: tb3_navigation.rviz
src/osm_planner/launch/: planner_node_launch.py
src/ouster_ros/: CMakeLists.txt  package.xml
src/ouster_ros/include/ouster_ros/: ros.h
src/ouster_ros/launch/: ouster.launch.py
src/ouster_ros/src/: os_cloud_node.cpp  os_node.cpp  ros.cpp  test.cpp
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/py/: package.xml  setup.cfg  setup.py
src/py/py/: keyboard.launch.py  pub.py  sub.py
src/universal_robot/ur_description/: CMakeLists.txt
src/universal_robot/ur_description/urdf/: workcell.urdf.xacro
src/universal_robot/ur_msgs/: CMakeLists.txt  package.xml
(+264 files in other folders)
