<?xml version="1.0"?>
<package format="3">
  <name>armbot_description</name>
  <version>0.4.4</version>
  <description>armbot_description</description>
  <maintainer email="buffoon@todo.todo">buffoon</maintainer>	
  <author email="buffoon@outlook.com">buffoon</author>
  <license>BSD</license>
 
<buildtool_depend>ament_cmake</buildtool_depend>
<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>urdf</exec_depend>
<exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>   
  </export>
</package>	
