<?xml version="1.0"?>
<package format="3">
  <name>ouster_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zxd@todo.todo">zxd</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
	<depend>rclcpp</depend>
    	<depend>std_msgs</depend>
	<depend>mymsgs</depend>
	<depend>sensor_msgs</depend>
  	<depend>eigen</depend>
  	<depend>tf2</depend>
  	<depend>geometry_msgs</depend>
  	<depend>tf2_ros</depend>
	<depend>pcl_conversions</depend>
	<build_depend>libpcl-dev</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

